predictive-pmml/src/main/java/com/sap/iot/edgeservices/predictive/sample/PersistenceException.java
/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 * Copyright (c) 2020 SAP SE or an affiliate company. All rights reserved.
 * The sample is not intended for production use.  Provided "as is".
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
package com.sap.iot.edgeservices.predictive.sample;

public class PersistenceException
extends Exception {
	public static final String CODE_AUTHENTICATION_INVALID_CREDENTIALS = "CODE_AUTHENTICATION_INVALID_CREDENTIALS"; // error
																													// code
																													// credentials
	public static final String CODE_SINGLETON_NOT_FOUND = "CODE_SINGLETON_NOT_FOUND"; // error code missing singleton
	private static final long serialVersionUID = -1230356990632230194L; // autogenerated id
	private final String code; // current code

	// constructor
	public PersistenceException(String code) {
		super();
		this.code = code;
	}

	/**
	 * @param message
	 *            message of the exception
	 * @param cause
	 *            cause of the exception
	 * @param code
	 *            code of the exception
	 */
	public PersistenceException(String message, Throwable cause, String code) {
		super(message, cause);
		this.code = code;
	}

	/**
	 * @param message
	 *            message of the exception
	 * @param code
	 *            code of the exception
	 */
	public PersistenceException(String message, String code) {
		super(message);
		this.code = code;
	}

	/**
	 * @param cause
	 *            cause of the exception
	 * @param code
	 *            code of the exception
	 */
	public PersistenceException(Throwable cause, String code) {
		super(cause);
		this.code = code;
	}

	/**
	 * @return the code
	 */
	public String getCode() {
		return this.code;
	}
}
